nginx-pod-complete.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  annotations:
    example-annotation: example-value
  labels:
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx:1.13.3
    ports:
    - containerPort: 80
    resources:
      requests:
        memory: 500M
        cpu: 0.5
      limits:
        memory: 1G
        cpu: 1
    livenessProbe:
      httpGet:
        path: /
        port: 80
      initialDelaySeconds: 3
      periodSeconds: 5
      failureThreshold: 3
