nginx-pod-namespaced.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: playground
spec:
  containers:
  - name: nginx
    image: nginx:1.13.3
    ports:
    - containerPort: 80
