nginx-pod-with-storage.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
  - name: nginx
    image: nginx:1.13.3
    ports:
    - containerPort: 80
    volumeMounts:
    - name: nginx-storage
      mountPath: /storage
  volumes:
  - name: nginx-storage
    persistentVolumeClaim:
      claimName: nginx-pvc
